--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+Testando traduções para Pt-br
+
+Abaixo instruções de como rodar a página
+
+
+####################################
+
 This is the repository of the LibreMesh web pages.
 
 All pages should be written using https://asciidoctor.org/docs/asciidoc-syntax-quick-reference/[asciidoc syntax].
